# django-my-site

./: .gitignore  README.md  mySite.todo  pyproject.toml
mySite/applications/api/: serializers.py  urls.py  views.py
mySite/applications/microblog/: admin.py  apps.py  forms.py  mixins.py  models.py  signals.py  urls.py  views.py
mySite/applications/microblog/migrations/: 0001_initial.py  0002_post_tags.py  0003_post_slug.py  0004_alter_post_slug.py
mySite/applications/microblog/templatetags/: taggitTags.py
mySite/applications/myList/: admin.py  apps.py  forms.py  mixins.py  models.py  signals.py  urls.py  views.py
mySite/applications/myList/migrations/: 0001_initial.py  0002_auto_20211012_1702.py  0002_auto_20220205_1226.py  0003_auto_20211012_2138.py  0004_book_videogame.py  0005_auto_20211017_1032.py  0006_auto_20211022_2210.py  0007_product_is_anime.py  0008_auto_20211026_0902.py  0009_alter_product_product_type.py  0010_remove_product_is_anime.py  0011_product_is_published.py  0012_auto_20220107_1716.py  (+3 more)
mySite/applications/rating/: admin.py  apps.py  models.py  urls.py  views.py
mySite/applications/resume/: admin.py  apps.py  mixins.py  models.py  urls.py  views.py
mySite/microblog/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
mySite/myList/: views.py
mySite/mySite/: settings.py  urls.py
mySite/resume/: urls.py
mySite/static/other/: filterRecommend.js  gitHubCards.css
mySite/templates/: base.html
mySite/templates/admin/: base_site.html
mySite/templates/inc/: _footer.html  _navbar.html  _pagination.html
(+35 files in other folders)
